.kiro/specs/iac-hygiene-remediation/artifacts/task-3.3-xrayvpn-suspension-20260902/gitops-apps-xrayvpn-before/x-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: x-ui
  namespace: xrayvpn
  labels:
    app: x-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: x-ui
  template:
    metadata:
      labels:
        app: x-ui
    spec:
      containers:
        - name: x-ui
          image: ghcr.io/mhsanaei/3x-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2053
              name: web
              protocol: TCP
          volumeMounts:
            - name: x-ui-data
              mountPath: /etc/x-ui
      volumes:
        - name: x-ui-data
          persistentVolumeClaim:
            claimName: x-ui-pvc
