.kiro/specs/iac-hygiene-remediation/artifacts/task-3.3-xrayvpn-suspension-20260902/gitops-apps-xrayvpn-before/xrayvpn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xrayvpn
  namespace: xrayvpn
spec:
  selector:
    app: xrayvpn
  type: NodePort
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 32080
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
