.kiro/specs/iac-hygiene-remediation/artifacts/task-3.3-xrayvpn-suspension-20260902/gitops-apps-xrayvpn-before/x-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: x-ui
  namespace: xrayvpn
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
spec:
  tls:
    - hosts:
        - xray.fickledev.com
      secretName: tls-fickledev-com
  rules:
    - host: xray.fickledev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: x-ui
                port:
                  name: web
